--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,6 @@
 
-/* Your CSS Code here. */
 .holder {
     display: grid;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-	grid-template-columns:100px, 100px;
-	
+    grid-template-columns: repeat(2, 100px);
+    grid-template-rows: repeat(2, 100px);
 }
